<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg_6"
    android:orientation="vertical"
    android:padding="5dp" >

    <TextView
        android:id="@+id/txtTitleExample"
        style="@style/Title"
        android:text="@string/title_example"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            
            <Button
                android:id="@+id/btnShowBannerAds"
                style="@style/ButtonText"
                android:background="@drawable/red_button"
                android:text="@string/banner_ads" />
            
             <Button
                android:id="@+id/btnWebView"
                style="@style/ButtonText"
                android:background="@drawable/black_button"
                android:text="@string/webview_demo" />
             
             <Button
                android:id="@+id/btnDraggable1"
                style="@style/ButtonText"
                android:background="@drawable/red_button"
                android:text="@string/draggable_symbols_1" />
             
             <Button
                android:id="@+id/btnDraggable2"
                style="@style/ButtonText"
                android:background="@drawable/black_button"
                android:text="@string/draggable_symbols_2" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>