<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg_7"
    android:orientation="vertical"
    android:padding="30dip" >

    <TextView
        style="@style/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="25dip"
        android:text="@string/webview_demo_title"
        android:textSize="24.5sp" />

    <Button
        android:id="@+id/button1"
        style="@style/ButtonText"
        android:background="@drawable/red_button"
        android:text="@string/mojito_recipe" />

    <Button
        android:id="@+id/button2"
        style="@style/ButtonText"
        android:background="@drawable/red_button"
        android:text="@string/noaa_tropical_satellite" />

</LinearLayout>